--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@
         
         <header>
             <div class="logo">
-                <div class="logo-icon">
+                <div class="https://imgloc.com/image/yLvf5t">
                     <!-- 【顶部LOGO替换位置】 -->
                     <!-- 将下面的"税"字替换为您的LOGO图片 -->
                     <!-- 方式1：直接替换为图片标签 -->
