--- a/index.html
+++ b/index.html
@@ -763,9 +763,6 @@
                     <!-- 将下面的"税"字替换为您的LOGO图片 -->
                     <!-- 方式1：直接替换为图片标签 -->
                     <!-- <img src="您的LOGO图片路径" alt="烽享财税"> -->
-                    税
-                    <!-- 方式2：或保持文字 -->
-                    <!-- 税 -->
                 </div>
                 <div class="logo-text">
                     <div class="chinese">烽享财税</div>
@@ -868,7 +865,7 @@
                         <!-- <img src="您的公安备案图标路径" alt="公安备案图标"> -->
                         
                         <!-- 方式3：使用当前默认图标 -->
-                        <img src="imges/beianlogo=" alt="公安备案图标">
+                        <img src="images/beianlogo=" alt="公安备案图标">
                     </div>
                     粤公网安备 44010602011937号
                 </a>
